# Nuclex.Platform.Native

./: .gitignore  CMakeLists.txt  Dependencies.md  Notice.md  Nuclex.Platform.Native (msvc-14.2).vcxproj  Nuclex.Platform.Native (msvc-14.2).vcxproj.filters  Nuclex.Platform.Native.Tests (msvc-14.2).vcxproj  Nuclex.Platform.Native.Tests (msvc-14.2).vcxproj.filters  ReadMe.md  SConstruct
Benchmarks/: BenchmarkMain.cpp
Include/Nuclex/Platform/: Config.h
Include/Nuclex/Platform/Errors/: InsufficientPermissionsError.h
Include/Nuclex/Platform/Hardware/: CpuInfo.h  DriveInfo.h  GpuInfo.h  MemoryInfo.h  PlatformAppraiser.h  PlatformAssessor.h  StoreInfo.h  VolumeInfo.h
Include/Nuclex/Platform/Interaction/: ActiveWindowTracker.h  ExtendedMessageService.h  GuiMessageService.h  Message.h  MessageIcon.h  MessageService.h  ModernGuiMessageService.h  TerminalMessageService.h
Include/Nuclex/Platform/Locations/: CommonLocationResolver.h  StandardDirectoryResolver.h
Include/Nuclex/Platform/Tasks/: CancellationTrigger.h  CancellationWatcher.h  NaiveTaskCoordinator.h  ResourceManifest.h  ResourceType.h  Task.h  TaskCoordinator.h  TaskEnvironment.h  ThreadedTask.h
Source/: Config.cpp
Source/Errors/: InsufficientPermissionsError.cpp
Source/Hardware/: CpuInfo.cpp  DriveInfo.cpp  GpuInfo.cpp  LinuxProcCpuInfoReader.cpp  LinuxProcCpuInfoReader.h  LinuxProcMemInfoReader.cpp  LinuxProcMemInfoReader.h  LinuxSysCpuTreeReader.cpp  LinuxSysCpuTreeReader.h  MemoryInfo.cpp  PlatformAppraiser.LinuxCpuInfo.cpp  PlatformAppraiser.LinuxMemoryInfo.cpp  PlatformAppraiser.LinuxStorageInfo.cpp  PlatformAppraiser.WindowsCpuInfo.cpp  PlatformAppraiser.WindowsMemoryInfo.cpp  PlatformAppraiser.WindowsStorageInfo.cpp  PlatformAppraiser.cpp  StoreInfo.cpp  StringHelper.cpp  StringHelper.h  VolumeInfo.cpp  WindowsBasicCpuInfoReader.cpp  WindowsBasicCpuInfoReader.h  WindowsBasicVolumeInfoReader.cpp  WindowsBasicVolumeInfoReader.h  WindowsRegistryCpuInfoReader.cpp  WindowsRegistryCpuInfoReader.h  WindowsVolumeStoreInfoReader.cpp  WindowsVolumeStoreInfoReader.h  WindowsWmiCpuInfoReader.cpp  WindowsWmiCpuInfoReader.h
Source/Interaction/: ActiveWindowTracker.cpp  ExtendedMessageService.cpp  GuiMessageService.Linux.cpp  GuiMessageService.Windows.cpp  GuiMessageService.cpp  Message.cpp  MessageIcon.cpp  MessageService.cpp  ModernGuiMessageService.Windows.cpp  ModernGuiMessageService.cpp  TerminalMessageService.Windows.cpp  TerminalMessageService.cpp
Source/Locations/: CommonLocationResolver.cpp  StandardDirectoryResolver.Linux.cpp  StandardDirectoryResolver.Windows.cpp  StandardDirectoryResolver.cpp  XdgDirectoryResolver.cpp  XdgDirectoryResolver.h
Source/Platform/: GtkDialogApi.cpp  GtkDialogApi.h  KdeWidgetsAddonsApi.cpp  KdeWidgetsAddonsApi.h  LinuxEnvironmentApi.cpp  LinuxEnvironmentApi.h  LinuxFileApi.cpp  LinuxFileApi.h  PosixApi.cpp  PosixApi.h  PosixDynamicLibraryApi.cpp  PosixDynamicLibraryApi.h  WindowsApi.cpp  WindowsApi.h  WindowsConsoleApi.cpp  WindowsConsoleApi.h  WindowsDeviceApi.cpp  WindowsDeviceApi.h  WindowsFileApi.cpp  WindowsFileApi.h  WindowsMessageBoxApi.cpp  WindowsMessageBoxApi.h  WindowsProcessApi.cpp  WindowsProcessApi.h  WindowsRegistryApi.cpp  WindowsRegistryApi.h  WindowsShellApi.cpp  WindowsShellApi.h  WindowsSysInfoApi.cpp  WindowsSysInfoApi.h  WindowsTaskDialogApi.cpp  WindowsTaskDialogApi.h  WindowsWmiApi.cpp  WindowsWmiApi.h
Source/Tasks/: CancellationTrigger.cpp  CancellationWatcher.cpp  NaiveTaskCoordinator.cpp  ResourceBudget.Allocate.cpp  ResourceBudget.Release.cpp  ResourceBudget.cpp  ResourceBudget.h  ResourceManifest.cpp  ResourceType.cpp  Task.cpp  TaskCoordinator.cpp  TaskEnvironment.cpp  ThreadedTask.cpp
Tests/Hardware/: LinuxCpuInfoParserTest.cpp  PlatformAppraiserTest.cpp  PlatformAssessorTest.cpp
Tests/Locations/: StandardDirectoryResolverTest.cpp  XdgDirectoryResolverTest.cpp
Tests/Tasks/: CancellationTriggerTest.cpp  CancellationWatcherTest.cpp  NaiveTaskCoordinatorTest.cpp  ResourceBudgetTest.cpp  ResourceManifestTest.cpp  ThreadedTaskTest.cpp
